updated styling to fix picksinput on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ body {
 	line-height: 1.5;
 	font-size: 1.10rem;
 	font-weight: bold;
-	margin: 1.5vh;
+	margin: 1.25vh;
 }
 
 .stars {
